--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,7 +1,7 @@
 FROM quay.io/souravkl11/raganork:multidevice
 
-RUN git clone https://github.com/souravkl11/raganork-md /skl/Raganork
+RUN git clone https://github.com/ZansLord/raganork-md/ /skl/Raganork
 WORKDIR /skl/Raganork
-ENV TZ=Asia/Kolkata
+ENV TZ=Asia/Jakarta
 RUN yarn install --network-concurrency 1
 CMD ["node", "index.js"]
